<resources>
    <string name="app_name">Pixel Generator</string>
    <string name="action_save">Export to .png</string>
    <string name="action_bg">Set as Background</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="up">Up</string>
    <string name="neww">New</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="title">Select Folder</string>
    <string name="location">Location</string>
    <string name="allow_storage_permission">Allow permissions to view files</string>
</resources>
