<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fp_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/title"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#333"
        android:textSize="24dp" />


    <TextView
        android:id="@+id/fp_tv_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:fontFamily="@font/montserrat"
        android:gravity="left"
        android:padding="5dp"
        android:text="Current Location"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#333"
        android:textSize="16dp" />


    <LinearLayout
        android:id="@+id/fp_buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_picker_up"
            android:clickable="true"
            android:drawableTop="@drawable/fp_ic_action_up"
            android:focusable="true"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:onClick="goBack"
            android:padding="5dp"
            android:text="@string/up"
            android:textColor="#333" />

        <TextView
            android:id="@+id/fp_btn_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_picker_add"
            android:clickable="true"
            android:drawableTop="@drawable/fp_ic_action_add"
            android:focusable="true"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:onClick="newFolderDialog"
            android:padding="5dp"
            android:text="@string/neww"
            android:textColor="#333" />

        <TextView
            android:id="@+id/fp_btn_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_picker_back"
            android:clickable="true"
            android:drawableTop="@drawable/fp_ic_action_back"
            android:focusable="true"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:onClick="select"
            android:padding="5dp"
            android:text="@string/select"
            android:textColor="#333" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_picker_cancel"
            android:clickable="true"
            android:drawableTop="@drawable/fp_ic_action_cancel"
            android:focusable="true"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:onClick="cancel"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="#333" />

    </LinearLayout>

    <ListView
        android:id="@+id/fp_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
